# quart-compress

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  quart_compress.py  requirements.txt  setup.py
quart_compress/: __init__.py  quart_compress.py  typing.py
tests/: conftest.py  test_quart_compress.py
tests/integration/: helper.py  test_caching.py  test_url.py
tests/templates/: large.html
tests/unit/: test_default_values.py  test_init.py
